commint